[package]
name = "pdlcache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
tonic = "0.9.1"
tonic-reflection = "0.9.1"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
prost = "0.11.8"
config = "0.13.3"

[build-dependencies]
tonic-build = "0.9.1"